Rules review:  Improve scoring model so that Geo and PlaceCandidates are assessed for a given rule once. Geolocation precision: HeatMap and Major Place rules added/updated to account for geolocation issues. Recall/Precision:  Introduced new gazetteer sources that had to be evaluated -- better recall in places, but tend to be noisy.